--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,25 @@
 body {
   background-color: black;
   color: white;
+  font-family: Verdana;
+  text-align: center;
+}
+
+h1 {
+  font-size: 50px;
+  font-weight: normal;
+}
+
+h2 {
+  font-size: 40px;
+  font-weight: 300;
+}
+
+p {
+  font-size: 21px;
+  color: gray;
+}
+
+.caption {
+  color: aquamarine;
 }
