--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -20,6 +20,17 @@ p {
   color: gray;
 }
 
+a {
+  color:aquamarine
+}
+
 .caption {
   color: aquamarine;
+  font-size: 16px;
+}
+
+footer {
+  color: gray;
+  font-size: 21px;
+  text-align: right;
 }
